--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -12,7 +12,7 @@
   title: tu.na
   date: August 2018
   role: Web Design, Development
-  description: is a utility developed to migrate Tumblr 'likes' to the are.na platform.
+  description: A Chrome add-on developed to migrate Tumblr 'likes' to the Are.na platform.
   images:
     - assets/img/rectangle.svg
     - assets/img/rectangle.svg
