--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -4,9 +4,8 @@
   date: 2017–2018
   role: Co-Editor, Art Direction, Design
   description: A student-run publication that celebrates the intersection of style, art, and design at UC San Diego.
-  collaborators: Photography by Dora Wang, Lily Tang, and Carter Duong<br>Text by Leanza Ellacer and Nariman Piri
   images:
-    - assets/img/rectangle.svg
+    - assets/img/fq1.png
 
 - tu.na: 
   title: tu.na
