--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -5,43 +5,40 @@
   role: Co-Editor, Art Direction, Design
   description: A student-run publication that celebrates the intersection of style, art, and design at UC San Diego.
   images:
-    - assets/img/fq1.png
-
-- tu.na: 
-  title: tu.na
-  date: August 2018
-  role: Web Design, Development
-  description: A Chrome add-on developed to migrate Tumblr 'likes' to the Are.na platform.
-  images:
-    - assets/img/rectangle.svg
-    - assets/img/rectangle.svg
+    - assets/img/fq15_cover.png
+    - assets/img/fq15_activewear.png
+    - assets/img/fq15_cosplay/cos.png
+    - assets/img/fq15_cosplay/cos5.png
 
 - Heavy Friends: 
   title: Heavy Friends
   date: April 2018
   role: Web Design, Development
-  description: (with DJ ABG and DJ SAT -2400) was a weekly radio show based out of KSDT at UC San Diego.
+  description: A microsite for a weekly radio show based out of KSDT at UC San Diego.
   images:
     - assets/img/hffm-tear-small.png
     - assets/img/iPhone_1.png
-
 
 - Résumé: 
   title: Résumé
   date: November 2016
   role: Game Design, Development  
-  description: is a game about being true to yourself.
+  description: A short game about being true to yourself.
   gifs:
     - assets/img/resume-1.mp4
     - assets/img/resume-2.mp4
     - assets/img/resume-3.mp4
 
+- Posters:
+  title: Posters
+  images:
+    - assets/img/160.png
+
 - Extras: 
   title: Extras
-  date: 2016–2018
+  date:
   role:
   description:
   images:
-    - assets/img/160.png
     - assets/img/vis1@0,75x.png
     - assets/img/rents@1x.png 
