Add basic webGL sketch

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -5,6 +5,7 @@
   role: Co-Editor, Art Direction, Design
   description: A student-run publication that celebrates the intersection of style, art, and design at UC San Diego.
   images:
+    - assets/img/fq319024.jpg
     - assets/img/fq15_cover.png
     - assets/img/fq15_activewear.png
     - assets/img/fq15_cosplay/cos.png
