Clean img folder

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -6,10 +6,9 @@
   description: A student-run publication that explores the culture of style, art, and design at UC San Diego.
   images:
     - assets/img/fq319039.png
-    - assets/img/fq15_cover.png
-    - assets/img/fq15_activewear.png
-    - assets/img/fq15_cosplay/cos.png
-    - assets/img/fq15_cosplay/cos5.png
+    - assets/img/fq319016.png
+    - assets/img/fq319022.png
+    - assets/img/fq319025.png
 
 - Heavy Friends: 
   title: Heavy Friends
