--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -3,7 +3,7 @@
   link:
   date: 2017–2019
   role: Co-Editor, Art Direction, Design
-  description: A student-run publication that explores the culture of style, art, and design at UC San Diego.
+  description: <a href="">A student-run publication</a> that explores the culture of style, art, and design at UC San Diego.
   images:
     - assets/img/fq1.png
     - assets/img/fq2.png
@@ -16,7 +16,7 @@
   title: Heavy Friends
   date: April 2018
   role: Web Design, Development
-  description: A microsite for a weekly radio show based out of KSDT at UC San Diego.
+  description: <a href="http://heavyfriends.info">A microsite</a> for a weekly radio show based out of KSDT at UC San Diego.
   images:
     - assets/img/hffm-tear-small.png
     - assets/img/iPhone_1.png
