Fix fq portrait images

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -16,7 +16,7 @@
   title: Heavy Friends
   date: April 2018
   role: Web Design, Development
-  description: <a href="http://heavyfriends.info">A microsite</a> for a weekly radio show based out of KSDT at UC San Diego.
+  description: <a href="http://heavyfriends.info" target="_blank">A microsite</a> for a weekly radio show based out of KSDT at UC San Diego.
   images:
     - assets/img/hffm-tear-small.png
     - assets/img/iPhone_1.png
