--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  carterduong
+github_username: carterduong
 
 # Build settings
 markdown: kramdown
@@ -13,3 +13,10 @@ plugins:
 
 sass:
   sass_dir: _scss
+
+exclude: 
+  - carterduong.com3.code-workspace
+  - feed.xml
+  - README.md
+  - Gemfile
+  - Gemfile.lock
