--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -4,6 +4,7 @@
   date: 2017–2019
   role: Co-Editor, Art Direction, Design
   description: <a href="">A student-run publication</a> that explores the culture of style, art, and design at UC San Diego.
+    <br><br>Writing by Leanza Ellacer and Zach Roberts. Photograhy by Carter Duong, Lily Tang, and Dora Wang.
   images:
     - assets/img/fq1.png
     - assets/img/fq2.png
@@ -44,4 +45,4 @@
   role:
   description: 
   images:
-    - assets/img/rents@1x.png
+    - assets/img/rents.png
