Add new poster + edit description

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -37,6 +37,7 @@
   date: 2018–2019
   description: Miscellaneous sketches in 3D and 2D.
   images: 
+    - assets/img/aiv.png
     - assets/img/160.png
 
 - Extras: 
