Add new poster, adjust date

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -16,7 +16,7 @@
   title: Bitter Melon
   date: April 2019
   role: Web Design, Development
-  description: <a href="https://dazzling-lewin-e0fdea.netlify.com" target="_blank">A lightweight photoblog</a> developed with <a href="https://choo.io" target="_blank">choo</a>.
+  description: <a href="https://dazzling-lewin-e0fdea.netlify.com" target="_blank">A lightweight photoblog</a> developed with <a href="https://choo.io" target="_blank">choo</a>.<br><br>Photography by Carter Duong.
   gifs: 
     - assets/img/b-m.mp4
     - assets/img/b-m2.mp4
@@ -56,6 +56,7 @@
   description: Miscellaneous sketches in 3D and 2D.
   images: 
     - assets/img/aiv.png
+    - assets/img/lwmb.png
     - assets/img/160.png
 
 - Extras: 
