Add new posters

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -56,7 +56,7 @@
   description: Miscellaneous sketches in 3D and 2D.
   images: 
     - assets/img/aiv.png
-    - assets/img/lwmb.png
+    - assets/img/mmm.png
     - assets/img/160.png
 
 - Extras: 
