--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -16,7 +16,7 @@
   title: Bitter Melon
   date: April 2019
   role: Web Design, Development
-  description: <a href="https://dazzling-lewin-e0fdea.netlify.com" target="_blank">A lightweight photoblog</a> developed with <a href="https://choo.io" target="_blank">choo</a>.<br><br>Photography by Carter Duong.
+  description: <a href="http://bitter-melon.co" target="_blank">A lightweight photoblog</a> developed with <a href="https://choo.io" target="_blank">choo</a>.<br><br>Photography by Carter Duong.
   gifs: 
     - assets/img/b-m.mp4
     - assets/img/b-m2.mp4
