Revise layout done

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,10 +1,20 @@
+- Carter Duong:
+  title: ⟡ Carter Duong
+  link: <a href="are.na/carter-duong" target="_blank">Are.na</a><br>
+        <a href="instagram.com/carterduong" target="_blank">Instagram</a><br>
+        <a href="mailto:c@carterduong.com" target="_blank">Email</a><br>
+  
+  description: is a designer and developer from 
+                the Bay Area<sup><a href="https://goo.gl/maps/cKExn6muhyq" target="_blank">1</a>+<a href="https://goo.gl/maps/VHi9HtWjcHs" target="_blank">2</a></sup> 
+                and based near Los Angeles.<sup><a href="https://goo.gl/maps/NrSy197bgj22" target="_blank">3</a></sup> He graduated from UC San Diego<sup><a href="https://goo.gl/maps/c4LcBHj2JUu" target="_blank">4</a></sup>
+                with a B.A. in Interdisciplinary Computing and the Arts, and is currently open to full-time or freelance collaborations.
+
 - Fashion Quarterly: 
   title: Fashion Quarterly
   link:
   date: 2017–2019
   role: Co-Editor, Art Direction, Design
-  description: <a href="https://drive.google.com/open?id=1fhh3G_KGaam5uttlMRh8_gPBNBtS-TsO" target="_blank">A student-run publication</a> that explores the culture of style, art, and design at UC San Diego.
-    <br><br>Writing by Leanza Ellacer and Zach Roberts. Photograhy by Carter Duong, Lily Tang, and Dora Wang.
+  description: <a href="https://drive.google.com/open?id=1fhh3G_KGaam5uttlMRh8_gPBNBtS-TsO" target="_blank">A student-run publication</a> that explores the culture of style, art, and design at UC San Diego. Writing by Leanza Ellacer and Zach Roberts. Photograhy by Carter Duong, Lily Tang, and Dora Wang.
   images:
     - assets/img/fq1.png
     - assets/img/fq2.png
