Test unicode preventing emoji

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,6 +1,6 @@
 - Carter Duong:
   title: ⟡ Carter Duong
-  link: <a href="http://are.na./carter-duong" target="_blank">Are.na↗</a><br>
+  link: <a href="http://are.na./carter-duong" target="_blank">Are.na↗&#xFE0E;</a><br>
         <a href="http://instagram.com/carterduong" target="_blank">Instagram↗</a><br>
         <a href="mailto:c@carterduong.com" target="_blank">Email↗</a><br>
   description: is a designer and developer from 
